updated monitor scss and view.

--- a/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
+++ b/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
@@ -317,6 +317,6 @@
         </footer>
     </div>
 
-    <%= javascript_include_tag 'admin/monitor' %>
+    <%= javascript_include_tag 'admin/monitor', 'data-turbo-track': 'reload' %>
 </body>
 </html>
